# Sudoku-Project

./: pyproject.toml  sudoku.py  test_misc.py  test_sudoku.py  tests.py
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sudoku.data.json  sudoku.ir.json  sudoku.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
.mypy_cache/3.8/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.8/tkinter/: __init__.data.json  __init__.meta.json  constants.data.json  constants.meta.json
gui_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_gui_workspace.py
