[tool.poetry]
name = "gui_workspace"
version = "0.1.0"
description = ""
authors = ["Tristan Knight <tristanknight217@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.761"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
